--- a/SBI IFFL no Yattributes.ipynb
+++ b/SBI IFFL no Yattributes.ipynb
@@ -169,7 +169,7 @@
     "        # Jonah tambien usa Skew y Kurtosis, es otra posibilidad\n",
     "        return np.array([tau1, tau2, x_ss, Xpeak])\n",
     "\n",
-    "observation_summary_statistics = calculate_summary_statistics(observation_trace.y[0], observation_trace.y[1]) #y[0] = x, y[1] = y"
+    "observation_summary_statistics = calculate_summary_statistics(observation_trace.y[0]) #y[0] = x, y[1] = y"
    ]
   },
   {
@@ -203,7 +203,7 @@
     "sol = simulator(k1, k2, k3, k4, Ac, xi)\n",
     "plt.plot(sol.t, sol.y[0], label=\"Simulation\")\n",
     "\n",
-    "stats = calculate_summary_statistics(sol.y[0], sol.y[1])\n",
+    "stats = calculate_summary_statistics(sol.y[0])\n",
     "print(\"Tau 1, Tau 2, Xss, Xpeak, Y_fin, Tau 1 Y\")\n",
     "print(stats)\n",
     "\n",
@@ -262,7 +262,7 @@
     "    Summarizes the output of the simulator and converts it to `torch.Tensor`.\n",
     "    \"\"\"\n",
     "    obs = simulator(params[0], params[1], params[2], params[3], params[4], params[5]) #y[0] = x\n",
-    "    stats = torch.as_tensor(calculate_summary_statistics(obs.y[0], obs.y[1]))\n",
+    "    stats = torch.as_tensor(calculate_summary_statistics(obs.y[0]))\n",
     "    return stats"
    ]
   },
